--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,12 @@ google-api-python-client
 gtts
 SpeechRecognition
 wikipedia
+streamlit
 supabase
+pypdf2
+langchain
+faiss-cpu
+langchain-community
+langchain_huggingface
+agno
+groq
